--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "mongoose": "^4.10.2"
   },
   "repository": {
     "type": "git",
