added 'npm run all' to run all three scripts to start app

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "nodemon --use-strict server/index.js",
     "bundle": "webpack",
-    "heroku-postbuild": "cd client/ && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "cd client/ && npm install --only=dev && npm install && npm run build",
+    "all": "concurrently -k \"mongod --dbpath=data\" \"npm run bundle\" \"npm run start\" "
   },
   "cacheDirectories": [
     "node_modules",
