--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "express-session": "^1.15.3",
