--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "6.9.x"
   },
   "scripts": {
-    "start": "nodemon --use-strict server/index.js",
+    "start": "node --use-strict server/index.js",
     "bundle": "webpack",
     "heroku-postbuild": "cd client/ && npm install --only=dev && npm install && npm run build",
     "all": "concurrently -k \"mongod --dbpath=data\" \"npm run bundle\" \"npm run start\" "
