--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "express-session": "^1.15.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "mongoose": "^4.10.2",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "passport-session": "^1.0.2",
     "passport-slack": "0.0.7",
     "style-loader": "^0.18.1",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "webpack-combine-loaders": "^2.0.3"
   },
   "repository": {
     "type": "git",
@@ -49,8 +51,6 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^3.4.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "nodemon": "^1.11.0",
-    "webpack-combine-loaders": "^2.0.3"
+    "nodemon": "^1.11.0"
   }
 }
